In machine_learning_template.ipynb, in Introduction > Project Overview section, update markdown comment

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "source": [
     "## Project Overview  \n",
-    "Illustrate a typical project overview with the example of predicting rental prices.  "
+    "Illustration of a typical project overview using the example of predicting rental prices.  "
    ]
   },
   {
