--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1712,6 +1712,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4786f108-9a6c-4428-b390-872f81a89feb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "tree = DecisionTreeRegressor(random_state=42)\n",
+    "\n",
+    "# Train model\n",
+    "tree.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = tree.predict(X_train_transformed)\n",
+    "y_val_pred = tree.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model\n",
+    "train_rmse = mean_squared_error(y_train, y_train_pred, squared=False)\n",
+    "val_rmse = mean_squared_error(y_val, y_val_pred, squared=False)\n",
+    "train_mape = mean_absolute_percentage_error(y_train, y_train_pred)\n",
+    "val_mape = mean_absolute_percentage_error(y_val, y_val_pred)\n",
+    "train_r2 = r2_score(y_train, y_train_pred)\n",
+    "val_r2 = r2_score(y_val, y_val_pred)\n",
+    "\n",
+    "# Create table of evaluation metrics\n",
+    "tree_evaluation = pd.DataFrame({\n",
+    "    \"Metric\": [\"RMSE\", \"MAPE\", \"R-squared\"],\n",
+    "    \"Training\": [train_rmse, train_mape, train_r2],\n",
+    "    \"Validation\": [val_rmse, val_mape, val_r2]\n",
+    "})\n",
+    "\n",
+    "# Show evaluation metrics\n",
+    "print(tree_evaluation.round(2))  # round metrics to 2 decimals"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "5770a103-1db7-4744-b484-44e63c1bf6b3",
    "metadata": {},
