--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1981,7 +1981,14 @@
    "outputs": [],
    "source": [
     "# Define models with baseline configurations\n",
-    "models = [LinearRegression(), SVR(), RandomForestRegressor(random_state=42), MLPRegressor(random_state=42), XGBRegressor(random_state=42)]\n",
+    "models = [\n",
+    "    LinearRegression(), \n",
+    "    SVR(), \n",
+    "    DecisionTreeRegressor(random_state=42),\n",
+    "    RandomForestRegressor(random_state=42), \n",
+    "    MLPRegressor(random_state=42), \n",
+    "    XGBRegressor(random_state=42)\n",
+    "]\n",
     "\n",
     "# Create lists for storing the evaluation metrics (RMSE, MAPE, R2) of each model \n",
     "rmse_ls = []\n",
@@ -2896,7 +2903,14 @@
    "outputs": [],
    "source": [
     "# Define models with baseline configurations\n",
-    "models = [LogisticRegression(), SVC(), RandomForestClassifier(random_state=42), MLPClassifier(random_state=42), XGBClassifier(random_state=42)]\n",
+    "models = [\n",
+    "    LogisticRegression(), \n",
+    "    SVC(), \n",
+    "    DecisionTreeClassifier(random_state=42), \n",
+    "    RandomForestClassifier(random_state=42), \n",
+    "    MLPClassifier(random_state=42), \n",
+    "    XGBClassifier(random_state=42)\n",
+    "]\n",
     "\n",
     "# Loop through each model\n",
     "for model in models:\n",
