In machine_learning_template.ipynb, in Modeling (Classification Task) > Training Baseline Models (Individually), add section for KNN Classifier

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2557,6 +2557,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "144f2d2b-57cf-420c-9f40-6c53610481b5",
+   "metadata": {},
+   "source": [
+    "### K-Nearest Neighbors Classifier\n",
+    "Hyperparameters and Default Values:\n",
+    "- Model Complexity:\n",
+    "    - `n_neighbors=5`: The number of neighbors to use for prediction. A higher value makes the model more general, while a lower value may lead to overfitting.\n",
+    "    - `weights=\"uniform\"`: Determines how neighbors are weighted during prediction. `\"uniform\"` gives equal weight to all neighbors, while `\"distance\"` gives closer neighbors more influence.\n",
+    "    - `p=2`: The power parameter for the Minkowski distance. `p=2` corresponds to the Euclidean distance, commonly used in KNN classification.\n",
+    "    - `algorithm=\"auto\"`: The algorithm used to compute nearest neighbors. `\"auto\"` selects the best algorithm based on the dataset (options include `\"ball_tree\"`, `\"kd_tree\"`, and `\"brute\"`).\n",
+    "    - `leaf_size=30`: The size of the leaf in tree-based algorithms like Ball Tree and KD Tree. This parameter impacts the speed and memory usage during training.\n",
+    "- Distance Metrics:\n",
+    "    - `metric=\"minkowski\"`: The distance metric used to calculate the proximity between data points. The default is `\"minkowski\"`, but you can also use `\"euclidean\"`, `\"manhattan\"`, etc.\n",
+    "    - `metric_params=None`: Additional parameters for the distance metric, usually left as `None`.\n",
+    "- Training Behavior:\n",
+    "    - `n_jobs=None`: The number of parallel jobs to run for neighbor search. Setting `n_jobs=-1` utilizes all available CPU cores for faster computation.\n",
+    "    - `radius=1.0`: Defines the search radius for neighbors. Instead of a fixed number of neighbors, this parameter considers neighbors within a given radius. This can be more flexible than `n_neighbors`, but it should be used with care as it may return an inconsistent number of neighbors.\n",
+    "    - `max_iter=None`: The maximum number of iterations for the neighbor search process. This is set to `None` to allow unlimited iterations.\n",
+    "    - `verbose=False`: Whether or not to print progress messages during training.\n",
+    "\n",
+    "For more details, refer to the official [scikit-learn KNN Classifier documentation](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "642e6c57-8d32-44ae-9f04-7592a27bb197",
    "metadata": {},
    "source": [
