--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -111,6 +111,7 @@
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler, OneHotEncoder\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_percentage_error, r2_score, classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
     "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsRegressor, KNeighborsClassifier\n",
     "from sklearn.svm import SVR, SVC\n",
     "from sklearn.tree import DecisionTreeRegressor, DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
