In machine_learning_template.ipynb, in Modeling (Classification Task) > Training Baseline Models (Individually) > KNN Classifier, add code to fit and evaluate model

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2582,6 +2582,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52c1b772-9248-4a69-85e2-727e652d6155",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "knn = KNeighborsClassifier()\n",
+    "\n",
+    "# Train model\n",
+    "knn.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = knn.predict(X_train_transformed)\n",
+    "y_val_pred = knn.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model: Classification report\n",
+    "print(\"Training Classification Report:\")\n",
+    "print(classification_report(y_train, y_train_pred))\n",
+    "print(\"Validation Classification Report:\")\n",
+    "print(classification_report(y_val, y_val_pred))\n",
+    "\n",
+    "# Evaluate model: Confusion matrix \n",
+    "print(\"Training Confusion Matrix:\")\n",
+    "cm_train = confusion_matrix(y_train, y_train_pred)\n",
+    "cm_disp_train = ConfusionMatrixDisplay(confusion_matrix=cm_train, display_labels=knn.classes_)\n",
+    "cm_disp_train.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Training Confusion Matrix\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Validation Confusion Matrix:\")\n",
+    "cm_val = confusion_matrix(y_val, y_val_pred)\n",
+    "cm_disp_val = ConfusionMatrixDisplay(confusion_matrix=cm_val, display_labels=knn.classes_)\n",
+    "cm_disp_val.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Validation Confusion Matrix\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "642e6c57-8d32-44ae-9f04-7592a27bb197",
    "metadata": {},
