In machine_learning_template.ipynb, in Modeling (Regression Task) > Training Baseline Models (Individually) > KNN Regressor, add code to fit and evaluate model

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1649,6 +1649,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2b097c1-1784-43d7-8155-03c16a4c8b4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "knn = KNeighborsRegressor()\n",
+    "\n",
+    "# Train model\n",
+    "knn.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = knn.predict(X_train_transformed)\n",
+    "y_val_pred = knn.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model\n",
+    "train_rmse = mean_squared_error(y_train, y_train_pred, squared=False)\n",
+    "val_rmse = mean_squared_error(y_val, y_val_pred, squared=False)\n",
+    "train_mape = mean_absolute_percentage_error(y_train, y_train_pred)\n",
+    "val_mape = mean_absolute_percentage_error(y_val, y_val_pred)\n",
+    "train_r2 = r2_score(y_train, y_train_pred)\n",
+    "val_r2 = r2_score(y_val, y_val_pred)\n",
+    "\n",
+    "# Create table of evaluation metrics\n",
+    "knn_evaluation = pd.DataFrame({\n",
+    "    \"Metric\": [\"RMSE\", \"MAPE\", \"R-squared\"],\n",
+    "    \"Training\": [train_rmse, train_mape, train_r2],\n",
+    "    \"Validation\": [val_rmse, val_mape, val_r2]\n",
+    "})\n",
+    "\n",
+    "# Show evaluation metrics\n",
+    "print(knn_evaluation.round(2))  # round metrics to 2 decimals"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4da407ee-333e-4bbf-9d83-6696852c8c35",
    "metadata": {},
