In machine_learning_template.ipynb, in Modeling > Training Baseline Models (Pipeline) > add k-nearest neighbors both in regression and classification tasks

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2045,6 +2045,7 @@
     "# Define models with baseline configurations\n",
     "models = [\n",
     "    LinearRegression(), \n",
+    "    KNeighborsRegressor(),\n",
     "    SVR(), \n",
     "    DecisionTreeRegressor(random_state=42),\n",
     "    RandomForestRegressor(random_state=42), \n",
@@ -3030,7 +3031,8 @@
    "source": [
     "# Define models with baseline configurations\n",
     "models = [\n",
-    "    LogisticRegression(), \n",
+    "    LogisticRegression(),\n",
+    "    KNeighborsClassifier(),\n",
     "    SVC(), \n",
     "    DecisionTreeClassifier(random_state=42), \n",
     "    RandomForestClassifier(random_state=42), \n",
