In machine_learning_template.ipynb, in Summary section, add knn and decision tree to modeling section and remove knn from next steps

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3543,8 +3543,8 @@
     "## Modeling\n",
     "Use `sklearn`, `xgboost`, and `pickle` for model training, evaluation, and saving.\n",
     "- **Train baseline models** to establish performance benchmarks:\n",
-    "    - Regression task: E.g., Linear Regression, Support Vector Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, and XGBoost Regressor using `sklearn` and `xgboost`.\n",
-    "    - Classification task: E.g., Logistic Regression, Support Vector Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, and XGBoost Classifier using `sklearn` and `xgboost`.\n",
+    "    - Regression task: E.g., Linear Regression, K-Nearest Neighbors Regressor, Support Vector Regressor, Decision Tree Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, and XGBoost Regressor using `sklearn` and `xgboost`.\n",
+    "    - Classification task: E.g., Logistic Regression, K-Nearest Neighbors Classifier, Support Vector Classifier, Decision Tree Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, and XGBoost Classifier using `sklearn` and `xgboost`.\n",
     "- **Hyperparameter tuning**:\n",
     "    - Perform hyperparameter tuning using grid search with `sklearn` `GridSearchCV`.\n",
     "- **Select the final model** based on performance evaluation:\n",
@@ -3556,7 +3556,6 @@
     "    - As a .pkl file using `pickle`.\n",
     "\n",
     "## Next Steps\n",
-    "- Add K-Nearest Neighbors (KNN) as individual baseline model and in model pipeline for both regression and classification task. \n",
     "- Add Lasso, Ridge, and Polynomial Regression for modeling.\n",
     "- Add RandomSearchCV for hyperparameter tuning.\n",
     "- Add unsupervised learning section with algorithms like K-Means Clustering, DBSCAN, and Principal Component Analysis (PCA).\n",
