--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1625,6 +1625,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "46ec9b1e-8277-4608-996d-32693cf800fd",
+   "metadata": {},
+   "source": [
+    "### Elastic Net Regression  \n",
+    "Hyperparameters and Default Values:  \n",
+    "- Model Complexity:  \n",
+    "    - `alpha=1.0`: Regularization strength. Higher values increase the penalty, reducing overfitting but possibly underfitting the data.  \n",
+    "    - `l1_ratio=0.5`: The mix between L1 (Lasso) and L2 (Ridge) regularization.  \n",
+    "        - `l1_ratio=1.0` corresponds to pure Lasso.  \n",
+    "        - `l1_ratio=0.0` corresponds to pure Ridge.  \n",
+    "- Solver Configuration:  \n",
+    "    - `fit_intercept=True`: Whether to calculate the intercept for the model. If `False`, the model assumes data is centered.  \n",
+    "    - `precompute=False`: Whether to use precomputed Gram matrices to speed up calculations. Set to `True` for small datasets.  \n",
+    "    - `max_iter=1000`: The maximum number of iterations allowed for convergence during optimization.  \n",
+    "    - `tol=1e-4`: Stopping criterion for optimization. If the change in the cost function is smaller than `tol`, training stops.\n",
+    "    - `warm_start=False`: If `True`, reuse the solution of the previous fit as initialization for the next fit.  \n",
+    "- Training Behavior:  \n",
+    "    - `selection=\"cyclic\"`: Determines the strategy for updating coefficients. `\"cyclic\"` updates coefficients sequentially, `\"random\"` in a random order.  \n",
+    "    - `random_state=None`: Seed for random number generation when `selection=\"random\"`.  \n",
+    "- Performance Configuration:  \n",
+    "    - `copy_X=True`: Whether to copy the input data `X`. If `False`, training modifies the original data, saving memory.  \n",
+    "\n",
+    "For more details, refer to the official [scikit-learn Elastic Net Regression documentation](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.ElasticNet.html).  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2d65fdc3-d927-4ae1-bf25-f8962fa7d099",
    "metadata": {},
    "source": [
