In machine_learning_template.ipynb, in Modeling (Regression Task) > Training Baseline Models (Individually) > Elastic Net Regression, add code to fit and evaluate model

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -110,7 +110,7 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler, OneHotEncoder\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_percentage_error, r2_score, classification_report, confusion_matrix, ConfusionMatrixDisplay\n",
-    "from sklearn.linear_model import LinearRegression, LogisticRegression\n",
+    "from sklearn.linear_model import LinearRegression, LogisticRegression, ElasticNet\n",
     "from sklearn.neighbors import KNeighborsRegressor, KNeighborsClassifier\n",
     "from sklearn.svm import SVR, SVC\n",
     "from sklearn.tree import DecisionTreeRegressor, DecisionTreeClassifier\n",
@@ -1648,6 +1648,42 @@
     "    - `copy_X=True`: Whether to copy the input data `X`. If `False`, training modifies the original data, saving memory.  \n",
     "\n",
     "For more details, refer to the official [scikit-learn Elastic Net Regression documentation](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.ElasticNet.html).  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "badb0792-6d99-441e-ba7c-f4e728163955",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model \n",
+    "en = ElasticNet()\n",
+    "\n",
+    "# Train model\n",
+    "en.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = en.predict(X_train_transformed)\n",
+    "y_val_pred = en.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model\n",
+    "train_rmse = mean_squared_error(y_train, y_train_pred, squared=False)\n",
+    "val_rmse = mean_squared_error(y_val, y_val_pred, squared=False)\n",
+    "train_mape = mean_absolute_percentage_error(y_train, y_train_pred)\n",
+    "val_mape = mean_absolute_percentage_error(y_val, y_val_pred)\n",
+    "train_r2 = r2_score(y_train, y_train_pred)\n",
+    "val_r2 = r2_score(y_val, y_val_pred)\n",
+    "\n",
+    "# Create table of evaluation metrics\n",
+    "en_evaluation = pd.DataFrame({\n",
+    "    \"Metric\": [\"RMSE\", \"MAPE\", \"R-squared\"],\n",
+    "    \"Training\": [train_rmse, train_mape, train_r2],\n",
+    "    \"Validation\": [val_rmse, val_mape, val_r2]\n",
+    "})\n",
+    "\n",
+    "# Show evaluation metrics\n",
+    "print(en_evaluation.round(2))  # round metrics to 2 decimals"
    ]
   },
   {
