--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2646,11 +2646,58 @@
     "cm_disp_train = ConfusionMatrixDisplay(confusion_matrix=cm_train, display_labels=lr.classes_)\n",
     "cm_disp_train.plot(cmap=\"Blues\")\n",
     "plt.title(\"Training Confusion Matrix\")\n",
-    "plt.show()b\n",
+    "plt.show()\n",
     "\n",
     "print(\"Validation Confusion Matrix:\")\n",
     "cm_val = confusion_matrix(y_val, y_val_pred)\n",
     "cm_disp_val = ConfusionMatrixDisplay(confusion_matrix=cm_val, display_labels=lr.classes_)\n",
+    "cm_disp_val.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Validation Confusion Matrix\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5783d743-efe1-4897-ad55-5dbaaadf2ad0",
+   "metadata": {},
+   "source": [
+    "### Elastic Net Logistic Regression  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c05af43-e149-4f99-baaf-fed4fa654eb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "en = LogisticRegression(penalty=\"elasticnet\", solver=\"saga\", l1_ratio=0.5)\n",
+    "\n",
+    "# Train model\n",
+    "en.fit(X_train_transformed, y_train)\n",
+    "\n",
+    "# Predict on the training and validation data\n",
+    "y_train_pred = en.predict(X_train_transformed)\n",
+    "y_val_pred = en.predict(X_val_transformed)\n",
+    "\n",
+    "# Evaluate model: Classification report\n",
+    "print(\"Training Classification Report:\")\n",
+    "print(classification_report(y_train, y_train_pred))\n",
+    "print(\"Validation Classification Report:\")\n",
+    "print(classification_report(y_val, y_val_pred))\n",
+    "\n",
+    "# Evaluate model: Confusion matrix \n",
+    "print(\"Training Confusion Matrix:\")\n",
+    "cm_train = confusion_matrix(y_train, y_train_pred)\n",
+    "cm_disp_train = ConfusionMatrixDisplay(confusion_matrix=cm_train, display_labels=en.classes_)\n",
+    "cm_disp_train.plot(cmap=\"Blues\")\n",
+    "plt.title(\"Training Confusion Matrix\")\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"Validation Confusion Matrix:\")\n",
+    "cm_val = confusion_matrix(y_val, y_val_pred)\n",
+    "cm_disp_val = ConfusionMatrixDisplay(confusion_matrix=cm_val, display_labels=en.classes_)\n",
     "cm_disp_val.plot(cmap=\"Blues\")\n",
     "plt.title(\"Validation Confusion Matrix\")\n",
     "plt.show()"
