In machine_learning_template.ipynb, in Modeling > Training Baseline Models (Pipeline), add Elastic Net for both regression and classification tasks

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2108,6 +2108,7 @@
     "# Define models with baseline configurations\n",
     "models = [\n",
     "    LinearRegression(), \n",
+    "    ElasticNet(),\n",
     "    KNeighborsRegressor(),\n",
     "    SVR(), \n",
     "    DecisionTreeRegressor(random_state=42),\n",
@@ -3142,6 +3143,7 @@
     "# Define models with baseline configurations\n",
     "models = [\n",
     "    LogisticRegression(),\n",
+    "    LogisticRegression(penalty=\"elasticnet\", solver=\"saga\", l1_ratio=0.5),\n",
     "    KNeighborsClassifier(),\n",
     "    SVC(), \n",
     "    DecisionTreeClassifier(random_state=42), \n",
