In machine_learning_template.ipynb, in Introduction > Project Overview section, add more example features

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -62,12 +62,13 @@
     "The dataset includes historical rental listings from [Data Source, e.g., Zillow] and consists of:\n",
     "\n",
     "- Target Variable: Monthly rent in [Currency, e.g., € or $].\n",
-    "- Features: Property size (m² or sqft), number of bedrooms and bathrooms, built year, property type (e.g., apartment), neighborhood, amenities.\n",
+    "- Features: Property size (m² or sqft), number of bedrooms and bathrooms, property type (e.g., apartment), neighborhood, built year, furnishing, heating type, amenities.\n",
     "- Example Data:\n",
-    "| Size  | Bedrooms | Bathrooms | Type      | Neighborhood | Rent (€) |\n",
-    "| :---- | :------- | :-------- | :-------- | :----------- | :------- |\n",
-    "| 800   | 2        | 1         | Apartment | Prenzlauer Berg | 1200     |\n",
-    "| 1200  | 3        | 2         | House     | Charlottenburg | 2500     |\n",
+    "\n",
+    "| Size (m²)  | Bedrooms | Bathrooms | Property Type      | Neighborhood     | Built Year | Furnishing | Heating  | Amenities          | Monthly Rent (€) |\n",
+    "| :----------| :------- | :-------- | :----------------- | :--------------- | :--------- | :--------- | :------- |:------------------ | :--------------- |\n",
+    "| 80         | 2        | 1         | Apartment          | Prenzlauer Berg  | 1990       | Yes        | Gas      | Balcony, Elevator  | 1200             |\n",
+    "| 120        | 3        | 2         | House              | Charlottenburg   | 2005       | No         | Electric | Garden, Parking    | 2500             |\n",
     "\n",
     "**Objectives**  \n",
     "The project aims to:\n",
