In machine_learning_template.ipynb, in Modeling (Classification) > Training Baseline Models > Elastic Net Logistic Regression section, add hyperparameter explanations as markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2686,7 +2686,18 @@
    "id": "5783d743-efe1-4897-ad55-5dbaaadf2ad0",
    "metadata": {},
    "source": [
-    "### Elastic Net Logistic Regression  "
+    "### Elastic Net Logistic Regression  \n",
+    "Note: Uses the same `LogisticRegression` class and hyperparameters as the standard Logistic Regression, with the key difference being the values for the Elastic Net regularization. Specifically, the `penalty` is set to `\"elasticnet\"`, and the solver should be `\"saga\"`. The `l1_ratio` parameter controls the mix between L1 and L2 regularization.\n",
+    "\n",
+    "Hyperparameters:\n",
+    "- `penalty=\"elasticnet\"`: Regularization type, combining both L1 and L2 penalties (`\"l1\"`, `\"l2\"`, `\"elasticnet\"`, or `\"none\"`).\n",
+    "- `l1_ratio=0.5`: The mix ratio between L1 and L2 regularization (0 is L2 only, 1 is L1 only). This parameter is specific to Elastic Net regularization.\n",
+    "- `solver=\"saga\"`: Optimization algorithm, recommended for Elastic Net (`\"lbfgs\"`, `\"liblinear\"`, `\"saga\"`, etc.).\n",
+    "- `C=1.0`: Inverse of regularization strength (smaller = stronger regularization).\n",
+    "- `max_iter=100`: Maximum iterations for convergence.\n",
+    "- `multi_class=\"auto\"`: Multi-class handling (`\"ovr\"` or `\"multinomial\"`).\n",
+    "- `fit_intercept=True`: Whether to calculate the intercept.\n",
+    "- `class_weight=None`: Class weights; `\"balanced\"` adjusts for imbalance."
    ]
   },
   {
