--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3690,8 +3690,8 @@
     "## Modeling\n",
     "Use `sklearn`, `xgboost`, and `pickle` for model training, evaluation, and saving.\n",
     "- **Train baseline models** to establish performance benchmarks:\n",
-    "    - Regression task: E.g., Linear Regression, K-Nearest Neighbors Regressor, Support Vector Regressor, Decision Tree Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, and XGBoost Regressor using `sklearn` and `xgboost`.\n",
-    "    - Classification task: E.g., Logistic Regression, K-Nearest Neighbors Classifier, Support Vector Classifier, Decision Tree Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, and XGBoost Classifier using `sklearn` and `xgboost`.\n",
+    "    - Regression task: E.g., Linear Regression, Elastic Net Regression, K-Nearest Neighbors Regressor, Support Vector Regressor, Decision Tree Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, and XGBoost Regressor using `sklearn` and `xgboost`.\n",
+    "    - Classification task: E.g., Logistic Regression, Elastic Net Logistic Regression, K-Nearest Neighbors Classifier, Support Vector Classifier, Decision Tree Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, and XGBoost Classifier using `sklearn` and `xgboost`.\n",
     "- **Hyperparameter tuning**:\n",
     "    - Perform hyperparameter tuning using grid search with `sklearn` `GridSearchCV`.\n",
     "- **Select the final model** based on performance evaluation:\n",
@@ -3703,7 +3703,6 @@
     "    - As a .pkl file using `pickle`.\n",
     "\n",
     "## Next Steps\n",
-    "- Add Lasso, Ridge, and Polynomial Regression for modeling.\n",
     "- Add RandomSearchCV for hyperparameter tuning.\n",
     "- Add unsupervised learning section with algorithms like K-Means Clustering, DBSCAN, and Principal Component Analysis (PCA).\n",
     "- Add model deployment as a web application with an interactive UI and API (e.g., using Gradio or Flask)."
