--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3704,6 +3704,7 @@
     "\n",
     "## Next Steps\n",
     "- Add RandomSearchCV for hyperparameter tuning.\n",
+    "- Add polynomial features.\n",
     "- Add unsupervised learning section with algorithms like K-Means Clustering, DBSCAN, and Principal Component Analysis (PCA).\n",
     "- Add model deployment as a web application with an interactive UI and API (e.g., using Gradio or Flask)."
    ]
