In machine_learning_template.ipynb, in Modeling (Classification) > Training Baseline Models > Logistic Regression section, update hyperparameter explanations markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2631,13 +2631,26 @@
    "source": [
     "### Logistic Regression  \n",
     "Hyperparameters and Default Values:\n",
-    "- `penalty=\"l2\"`: Regularization type (`\"l1\"`, `\"l2\"`, `\"elasticnet\"`, or `\"none\"`).\n",
-    "- `C=1.0`: Inverse of regularization strength (smaller = stronger regularization).\n",
-    "- `solver=\"lbfgs\"`: Optimization algorithm (`\"lbfgs\"`, `\"liblinear\"`, `\"saga\"`, etc.).\n",
-    "- `max_iter=100`: Maximum iterations for convergence.\n",
-    "- `multi_class=\"auto\"`: Multi-class handling (`\"ovr\"` or `\"multinomial\"`).\n",
-    "- `fit_intercept=True`: Whether to calculate the intercept.\n",
-    "- `class_weight=None`: Class weights; `\"balanced\"` adjusts for imbalance.\n",
+    "- Regularization\n",
+    "    - `penalty=\"l2\"`: Regularization type (options are `\"l1\"`, `\"l2\"`, `\"elasticnet\"`, or `\"none\"`).\n",
+    "    - `C=1.0`: Inverse of regularization strength (smaller = stronger regularization).\n",
+    "    - `l1_ratio=None`: The mix ratio between L1 and L2 regularization (0 is L2 only, 1 is L1 only). Used with `penalty=\"elasticnet\"` and `solver=\"saga\"`.\n",
+    "- Optimization\n",
+    "    - `solver=\"lbfgs\"`: Optimization algorithm (options are `\"lbfgs\"`, `\"liblinear\"`, `\"saga\"`, `\"newton-cg\"`, or `\"sag\"`).\n",
+    "    - `max_iter=100`: Maximum number of iterations for convergence.\n",
+    "    - `tol=1e-4`: Tolerance for stopping criteria.\n",
+    "- Model Behavior\n",
+    "    - `fit_intercept=True`: Whether to calculate the intercept.\n",
+    "    - `intercept_scaling=1.0`: Scaling of the intercept (used with `solver=\"liblinear\"`).\n",
+    "    - `warm_start=False`: Reuse previous solution for subsequent fits.\n",
+    "    - `dual=False`: Use dual formulation (only with `penalty=\"l2\"` and `solver=\"liblinear\"`).\n",
+    "- Multi-Class Classification\n",
+    "    - `multi_class=\"auto\"`: Multi-class handling (options are `\"auto\"`, `\"ovr\"`, or `\"multinomial\"`).\n",
+    "    - `class_weight=None`: Class weights; `\"balanced\"` adjusts for imbalanced class frequencies.\n",
+    "- Performance\n",
+    "    - `random_state=None`: Seed for reproducibility.\n",
+    "    - `n_jobs=None`: Number of CPU cores used during computation (only with `solver=\"liblinear\"`).\n",
+    "    - `verbose=0`: Verbosity level; controls solver progress output.\n",
     "\n",
     "For more details, refer to the official [scikit-learn LogisticRegression documentation](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html)."
    ]
