In machine_learning_template.ipynb, add Polynomial Features section with explanations as markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1531,6 +1531,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa73dc8f-a53a-4feb-91ae-aa3bfd1a26df",
+   "metadata": {},
+   "source": [
+    "# Polynomial Features\n",
+    "Create polynomial features in addition to feature scaling and encoding. Use a `ColumnTransformer` to preprocess columns based on their data type. This allows the appropriate transformation to each column type in a single pipeline:  \n",
+    "- Numerical columns: Use a `Pipeline` that combines:\n",
+    "    -  `PolynomialFeatures` to create polynomial terms (e.g., squared terms and interaction terms).\n",
+    "    -  `StandardScaler` to scale features to have mean = 0 and standard deviation = 1 or optionally `MinMaxScaler` to scale features to a range between [0, 1].\n",
+    "- Categorical columns: Apply `OneHotEncoder` to convert categorical variables into binary (one-hot) encoded vectors.\n",
+    "- Boolean columns: Retain in their original form using `remainder=\"passthrough\"`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
    "source": [
