In machine_learning_template.ipynb, in Polynomial Features section, add code to create polynomial features in addition to feature scaling and encoding

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1544,6 +1544,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05cb6c0f-9335-4bd1-a205-6900b5a5125a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize a column transformer\n",
+    "column_transformer = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        # Numerical columns: Use a pipeline to create polynomial features followed by feature scaling \n",
+    "        (\"poly_scaler\", Pipeline([\n",
+    "            (\"poly\", PolynomialFeatures(degree=2, include_bias=False)),  # Hyperparameter tuning is recommended to identify the ideal degree of polynomial features\n",
+    "            (\"scaler\", StandardScaler())  # Use MinMaxScaler() for min-max normalization\n",
+    "        ]), numerical_columns),\n",
+    "        \n",
+    "        # Categorical columns: One-hot encoding \n",
+    "        (\"encoder\", OneHotEncoder(drop=\"first\"), categorical_columns)  \n",
+    "    ],\n",
+    "    remainder=\"passthrough\"  # Keep boolean columns as they are\n",
+    ")\n",
+    "\n",
+    "# Fit the column transformer to the training data and apply transformations\n",
+    "X_train_transformed = column_transformer.fit_transform(X_train)\n",
+    "\n",
+    "# Apply the same transformations to the validation and test data\n",
+    "X_val_transformed = column_transformer.transform(X_val)\n",
+    "X_test_transformed = column_transformer.transform(X_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
    "metadata": {},
